--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
+    "redis": "^4.7.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
