--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,21 +5,21 @@ services:
     image: mongo:6.0
     container_name: mongo
     ports:
-      - "27017:27017" # Expose MongoDB on localhost:27017
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
-      - mongo_data:/data/db # Persistent storage for MongoDB
+      - mongo_data:/data/db
 
   redis:
     image: redis:7
     container_name: redis
     ports:
-      - "6379:6379" # Expose Redis on localhost:6379
-    command: ["--appendonly", "yes"] # Enable persistence
+      - "6379:6379"
+    command: ["--appendonly", "yes"]
     volumes:
-      - redis_data:/data # Persistent storage for Redis
+      - redis_data:/data
 
 volumes:
   mongo_data:
