--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ NODE_ENV=development
 PORT=3000
 
 # MongoDB Config
-MONGO_URI=mongodb://root:example@localhost:27017
+MONGO_URI=mongodb://root:example@mongo:27017/pokemon-api?authSource=admin
 
 # Jwt Config
 JWT_SECRET=secret_key
 JWT_EXPIRES_IN='1h'
 
 # Redis Config
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
